# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "Login to api",
+                "description": "for login to app",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,17 +14,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Login"
+                    "Login user"
                 ],
-                "summary": "Login",
+                "summary": "Login To App",
                 "parameters": [
                     {
                         "description": "Login User",
-                        "name": "users",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/login.LoginRequest"
+                            "$ref": "#/definitions/login.LoginRequestBody"
                         }
                     }
                 ],
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/login.LoginResponse"
                         }
                     }
                 }
@@ -125,7 +125,7 @@
                 }
             }
         },
-        "login.LoginRequest": {
+        "login.LoginRequestBody": {
             "type": "object",
             "required": [
                 "password",
@@ -135,7 +135,38 @@
                 "password": {
                     "type": "string"
                 },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "login.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/login.LoginResponseData"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "login.LoginResponseData": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                },
                 "token": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
